# gabber-chat-rust-lib

./: Cargo.toml  build.rs  uniffi-bindgen.rs  xc-universal-binary.sh
bindings/: gabber_chat_lib.swift  gabber_chat_libFFI.h  gabber_chat_libFFI.modulemap
src/: ChatLib.udl  gabber_chat_lib.udl  lib.rs
src/libs/: chat_initalisation.rs  database.rs  encryption.rs  message_queue.rs  mod.rs  models.rs  storage.rs  sync.rs
src/libs/core/: chat_initalisation.rs  mod.rs  models.rs
src/libs/encryption/: double_ratchet.rs  double_ratchet_header.rs  mod.rs
src/libs/storage/: lib_sqlite_impl.rs  mod.rs  records.rs  storage_traits.rs
src/libs/storage/database/: database.rs  mod.rs  storage_sqllite.rs  storage_traits.rs
src/libs/uniffi/: models.rs
tests/: database.rs  integration_test.rs  load_latest_message_for_user_test.rs  ratchet_encryption.rs
tests/common/: mod.rs
