[package]
name = "gabber-chat-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
lazy_static = "1.5.0"
rusqlite = { version = "0.34.0", features = ["bundled"]}
thiserror = "2.0.12"
chrono = "0.4.40"
uuid = { version = "1.16.0", features = ["v7"] }
uniffi = { version = "0.29.1", features = ["cli"] }
once_cell = "1.21.3"
tempfile = "3.19.1"
x25519-dalek = { version = "2.0.1", features = ["getrandom", "static_secrets"] }
hmac = "0.12.1"
sha2 = "0.10.8"
hkdf = "0.12.4"
chacha20poly1305 = "0.10.1"

[build-dependencies]
uniffi_build = { version = "0.29.1" }

[lib]
crate-type = ["cdylib", "staticlib"]
name = "gabber_chat_lib"
path = "src/lib.rs"

[[bin]]
name = "uniffi"
path = "uniffi-bindgen.rs"
